@startuml
title   HealthCalculator


skinparam class {
BackgroundColor White
ArrowColor Black
BorderColor Black
}
skinparam object {
BackgroundColor White
ArrowColor Black
BorderColor Black
}
scale 1.3
skinparam DefaultTextAlignment left
skinparam shadowing false
skinparam packageStyle frame
hide circle
'hide members
'skinparam monochrome true
'note " lots in deal" as spread
'package Storage {
class Heart{
age
gender
pulse
harrington1
calc()
}
class Resp{
age
time
harrington1
calc()
}
class IMT{
weight
height
h_level
harrington2
calc()
}
class Health{
h_level
diagram()
}
class User{
input()
output()
}
class Harrington1{
y_bad
y_good
h_level
y_list
calc_d(y)
calibrate()
}
class Harrington2{
y_optimum
d_optimum
h_level
calc_d(y)
calibrate()
}
Harrington1 "2"--"1" Harrington2
Health -l- Heart
Health - IMT
Health -u- User
Health --  Resp
'Mean_deal --|> Deal
@enduml




